# QtClangWrapper

./: CMakeLists.txt  README.md
data/: source.cpp
include/: Application.hpp  Window.hpp  readFile.hpp
include/Application/: Application.hpp
include/Panel/: CustomComboBox.hpp  Panel.hpp
include/Process/: Process.hpp
include/Workspace/: Highlighter.hpp  Workspace.hpp
src/: Application.cpp  Window.cpp  main.cpp  readFile.cpp
src/Application/: Application.cpp
src/Panel/: CustomComboBox.cpp  Panel.cpp
src/Process/: Process.cpp
src/Window/: Window.cpp
src/Workspace/: Highlighter.cpp  Workspace.cpp
